syntax = "proto3";

package shop;
option go_package = "./shop";

message  migrateReq {
  int64 siteId = 1;
}

message  migrateReply {

}

message CategoryGetReq {
  int64 siteId = 1;
  string name = 2;
  optional int64 parentId = 3;
  optional double listOrder = 4;
  optional int64  status = 5;
  optional int32 current = 6;
  optional int32 pageSize = 7;
}

message CategoryTreeReq {
  string name = 1;
  optional int64  status = 2;
  optional int64 ignoreId = 3;
  int64 siteId = 4;
}

message CategoryShowReq {
  int64   id = 1;
  int64 siteId = 2;
}

message CategorySaveReq {
  int64   id = 1;
  optional int64   parentId = 2;
  string  name = 3;
  optional string  icon = 4;
  optional string  desc = 5;
  optional int64   status = 6;
  optional double  listOrder = 7;
  int64 siteId = 8;
}

message CategoryDelReq {
  int64  id = 1;
  int64 siteId = 2;
}

message CategoryResp {
  // 创建分类的响应信息
  int64   productCategoryId = 1;
  int64   parentId = 2;
  string  name = 3;
  string  path = 4;
  string  icon = 5;
  string  desc = 6;
  int64   status = 7;
  double  listOrder = 8;
  int64 createdAt = 9;
  int64 updatedAt = 10;
  string createdTime = 11;
  string updatedTime = 12;
}

message CategoryListResp {
  repeated CategoryResp data = 1;
  int64 total = 2;
}

message CategoryTreeData {
  int64   productCategoryId = 1;
  int64   parentId = 2;
  string  name = 3;
  string  path = 4;
  string  icon = 5;
  string  desc = 6;
  int64   status = 7;
  double  listOrder = 8;
  int64 createdAt = 9;
  int64 updatedAt = 10;
  string createdTime = 11;
  string updatedTime = 12;
  repeated CategoryTreeData children = 13;
}

message CategoryTreeListResp {
  repeated CategoryTreeData data = 1;
}

// 商品列表
message ProductGetReq {
  string productName = 1;
  int64 productCategory = 2;
  optional int64 status = 3;
  optional int32 current = 4;
  optional int32 pageSize = 5;
  int64 siteId = 6;
}

// 商品详情
message ProductShowReq {
  int64 siteId = 1;
  int64 productId = 2;
}

// 商品规格
message ProductSku {
  optional int64 skuId = 1;
  string attrsVal = 2;
  optional string skuCode = 3;
  optional string skuBarcode = 4;
  double retailPrice = 5;
  int64 stock = 6;
  optional double originalPrice = 7;
  optional double costPrice = 8;
  double weight = 9;
  optional int64 status = 10;
}

message AttributesItem {
  string name = 1;
}

message Attributes {
  string name = 1;
  repeated AttributesItem items = 2;
}

message ProductResp {
  int64 productId = 1;
  string productName = 2;
  int64 userId = 3;
  string productBarcode = 4;
  int64 productCategory = 5;
  string productCategoryName = 6;
  string mainVideo = 7;
  string explanationVideo = 8;
  repeated Attributes attributes = 9;
  double price = 10;
  int64 priceNegotiable = 11;
  string stockUnit = 12;
  int64 stock = 13;
  string shareDescription = 14;
  string productSellingPoint = 15;
  double originalPrice = 16;
  double costPrice = 17;
  int32 hideRemainingStock = 18;
  string productContent = 19;
  int64 status = 20;
  repeated ProductSku productSku = 21;
  int64 createdAt = 22;
  int64 updatedAt = 23;
  string createdTime = 24;
  string updatedTime = 25;
  repeated  string productThumbnail = 26;
}

message ProductListResp {
  repeated ProductResp data = 1;
  int64 total = 2;
}

// 保存商品
message ProductSaveReq {
  optional int64 productId = 1;
  string productName = 2;
  int64 userId = 3;
  optional string productBarcode = 4;
  int64 productCategory = 5;
  optional string mainVideo = 6;
  optional string explanationVideo = 7;
  string attributes = 8;
  double price = 9;
  string stockUnit = 10;
  int64 stock = 11;
  string shareDescription = 12;
  string productSellingPoint = 13;
  double originalPrice = 14;
  double costPrice = 15;
  int32 hideRemainingStock = 16;
  int32 deliveryMethod = 17;
  string productContent = 18;
  optional int64 status = 19;
  repeated ProductSku productSku = 20;
  int64 siteId = 21;
  int64  PriceNegotiable = 22;
  repeated  string productThumbnail = 23;
}

message ProductSaveResp {
  int64 productId = 1;
  string productName = 2;
}

message ProductAttrKeyReq {
  string key = 1;
  int64 siteId = 2;
}

message ProductAttrKeyResp {
  int64 attrKeyId = 1;
  string attributeKey = 2;
}

message ProductAttrValReq {
  string value = 1;
  int64 siteId = 2;
}

message ProductAttrValResp {
  int64 attrValId = 1;
  string attributeValue = 2;
}

service ShopService {
  rpc AutoMigrate(migrateReq) returns (migrateReply);
}

service CategoryService {
  rpc CategoryGet(CategoryGetReq) returns(CategoryListResp);
  rpc CategoryTree(CategoryTreeReq) returns(CategoryTreeListResp);
  rpc CategoryShow(CategoryShowReq) returns(CategoryResp);
  rpc CategorySave(CategorySaveReq) returns(CategoryResp);
  rpc CategoryDel(CategoryDelReq) returns(CategoryResp);
}

service ProductService {
  rpc ProductGet(ProductGetReq) returns(ProductListResp);
  rpc ProductShow(ProductShowReq) returns(ProductResp);
  rpc ProductSave(ProductSaveReq) returns(ProductSaveResp);
}

service ProductAttrService {
  rpc AttrKeySave(ProductAttrKeyReq) returns(ProductAttrKeyResp);
  rpc AttrValSave(ProductAttrValReq) returns(ProductAttrValResp);
}
